# agent-control-plane

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
config/: workspaces.example.toml
docs/: claude-mcp.example.json  claude-worker-routing.md  codex-mcp.example.toml  codex-worker-routing-verification-report.md  codex-worker-routing.md  compatibility.md  ecosystem-porting-notes.md  operations.md  recovery-matrix.md  releasing.md  upgrading.md
scripts/: run_affected_tests.py
src/agent_control_plane/: __init__.py
src/agent_control_plane/shared/: agent_backends.py  claude_session_usage.py  clock.py  codex_session_usage.py  config.py  git_tools.py  native_quality.py  path_rules.py  sqlite_runtime.py  verification_report.py
tests/: test_agy_prompt_builder.py  test_antigravity_manager.py  test_architecture.py  test_codex_constraints.py  test_codex_runner.py  test_codex_telemetry.py  test_config.py  test_failure_reporting.py  test_git_tools.py  test_guardrails.py  test_handoff_cli.py  test_ide_inspections.py  test_ide_modules.py  test_job_metrics.py  test_job_reconciliation.py  test_job_store.py  test_model_routing.py  test_orchestrator_runner.py  test_plan_cli.py  test_plan_mcp.py  test_plan_store.py  test_policy.py  test_prompt_builder.py  test_pty_runner.py  test_quota_broker.py  test_result_detector.py  test_result_handoff_orchestrator.py  test_review_inbox.py  test_route_root_guard.py  test_shared_ide_sdk.py  test_slot_checkpoint.py  test_slot_manager.py  test_slot_store.py  test_sqlite_runtime.py  test_subagent_handoff.py  test_watch.py
tests/app/runtime/: test_demo_cli.py  test_failure_reporting.py  test_handoff_cli.py  test_mcp_stdio.py  test_orchestrator_runner.py  test_plan_cli.py  test_plan_mcp.py  test_review_cli.py  test_watch.py
tests/architecture/: test_architecture.py
tests/entities/job/: test_job_metrics.py  test_job_store.py  (+1 more)
tests/shared/: test_claude_session_usage.py  test_config.py  test_git_tools.py  test_sqlite_runtime.py
tests/tooling/: test_affected_tests.py
(+109 files in other folders)
